[package]
name = "imgflip"
version = "0.1.0"
authors = ["robo9k <robo9k@symlink.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2.13", features = ["macros"] }
serde = { version = "1.0.105", features = ["derive"] }
serde_qs = "0.5.2"
url = { version = "2.1.1", features = ["serde"] }
futures = "0.3"