[package]
name = "imgflip"
version = "0.1.0"
authors = ["robo9k <robo9k@symlink.io>"]
edition = "2018"
description = """
HTTP API wrapper for the meme generator `api.imgflip.com`
"""
readme = "README-crate.md"
categories = ["api-bindings"]
keywords = ["meme", "imgflip"]
repository = "https://github.com/robo9k/imgflip.rs"
license = "MIT OR Apache-2.0"
exclude = ["/examples/", ".gitignore"]

[badges]
maintenance = { status="experimental" }

[dependencies]
reqwest = { version="0.11", features=["json"] }
tokio = { version="1.7", features=["macros"] }
serde = { version="1.0.105", features=["derive"] }
serde_qs = "0.8"
url = { version="2.1.1", features=["serde"] }
futures = "0.3"
thiserror = "1.0"
